Fix for "oddly inflated, and the round background is distorted" next and prev. text buttons.

--- a/static/css/text/common.scss
+++ b/static/css/text/common.scss
@@ -233,38 +233,43 @@ h1, h2, h3, h4, h5, h6 {
     display:inline-block;
 }
 
-#nextprev {        
-        width: 18em;
+#nextprev {
+    width: 18em;
     margin: -1em auto;
-    
-    .next, .previous {
-	font-size:2em;
-        margin-bottom: 1.5em;
-        color: misc-color(medium-gray);
-        border-radius: 50%;
+
+    .next-btn-container, .prev-btn-container {
+        display: inline-block;        
         background-color: rgba(230,230,230,0.2);
-        border: none;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        text-align: center;
+        margin-bottom: 48px;
         &:hover {
             background: misc-color(light-light-gray);
             border-radius: 50%;
         }
     }
-    .next {
-        padding: 1.5rem 2.3rem 1.5rem 2.5rem;
-        float: right;
-
-    }
-    .previous {
-        padding: 1.5rem 2.5rem 1.5rem 2.3rem;
+    .prev-btn-container {
         float: left;
     }
-
-    .next + .previous {
-        margin-top: 1.5em;
+    .next-btn-container {
+        float: right;
+    }
+    .next, .previous {
+        padding: 0;
+        margin: 0;
+        height: 100px;
+        line-height: 104px;
+        vertical-align: middle;
+        font-size:2em;
+        color: misc-color(medium-gray);
+        border: none;
+    }
+    .next {
+        margin-left: 5px;
     }
 }
-
-
 
 .marked {
     background: pastel-color(bright-red);
